! small Memory leak fixed (had to do with new ASIO implementation)
! Bug with Machine exchange (wolumes where messed when the change was native for VST)
! asio hard clips for the babies who don't leave any headroom (pooplog)
! some memory leaks and access violation [JAZ]
! cloning locates the new machine better and numbers it correctly (pooplog)

V1.7.3 RC2
----------
! whoops - fixed the dsound config dialog (pooplog)
! whoops - fixed the unable to load many types of wave files issue (pooplog)
! whoops - fixed the note-off bug while recording (pooplog)
! whoops - loading a song moves to the top of the sequence again (pooplog)
! whoops - fixed the tempo not set before machines loaded bug- made crossdelay 
  have wrong tempo on tick mode (pooplog)
! whoops - there were 2 warnings on loading a song (pooplog)
+ vu meter can be turned off from the theme dialog (pooplog)
* All-new high-performance ASIO implementation - MSB float mode not done yet (pooplog)

V1.7.3 RC1
----------
+ double clicking on pattern highlights that track (pooplog)
+ 64 tracks available! (might break some machines?) (pooplog)
+ play from start button (pooplog)
+ psycle now appends names of new machines with a counter if duplicate name exists (pooplog)
+ psycle can display machines' number (ie 02:Sampler) - toggleable (pooplog)
+ psycle now marks missing machines that were replaced by dummy with an X (pooplog)
+ machine and instrument cloning (from gear rack or right-click window) (pooplog)
+ moving wires, preserving volume, dragging triangles with shift moves destination. [alk] (pooplog)
+ background bitmaps in machine view - to clear it, pick cancel in file dialog (pooplog)
+ you can now select the size of the polygons/triangles (pooplog)
+ lots of new options for wav file output (pooplog)
* new file format fixing a lot of problems, and incorporating FAST lossless data compression (pooplog)
* better memory management of pattern data (up to 10mb savings!) (pooplog)